update movement endpoint, update openapi.yaml, refactor create product endpoint
